--- a/src/App.css
+++ b/src/App.css
@@ -546,6 +546,15 @@ input:checked+.slider:before {
   cursor: pointer;
   color: var(--white-color);
 }
+
+.selectAnswer{
+  background-color: var(--red-color);
+  -webkit-box-shadow: 0px 4px 16px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 4px 16px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 4px 16px -5px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+  color: var(--white-color);
+}
 /* END ANSWER OPTIONS*/
 
 /* QUIZOVER */
