--- a/src/App.css
+++ b/src/App.css
@@ -521,6 +521,7 @@ input:checked+.slider:before {
   border-radius: 5px;
   background: var(--red-color);
   width:20px;
+  transition: width .2s ease-in
 }
 /* END PROGRESS BAR */
 
